# mr

./: .gitignore  Makefile.am
math/: Makefile.in  matching_running.nb  mr.tm  mr_check_GF.m  mr_check_run_mPl.m  mr_lib.m  mr_scan_matching_degrassi.m  mr_scan_matching_pdg.m  mr_test_lib.m  mrimpl.cpp
math/qedxqcd/: AsDecQCDandEW.m  QEDxQCD.m
mr/: base.hpp  bb.hpp
